kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: argocd-cicd
  labels:
    app: laravel-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: laravel-app
